# OpenCV-CUDA-Video-Image-Crop

./: CMakeLists.txt  README.md
include/: cuda_crop.hpp  cuda_utils.hpp
src/: centre_crop.cpp  cuda_crop.cu
